[gd_scene load_steps=11 format=3 uid="uid://ceq8618ebypjv"]

[ext_resource type="Script" path="res://Scripts/shop.gd" id="1_111bm"]
[ext_resource type="FontFile" uid="uid://dxugtxh0y4c00" path="res://Assets/Fonts/FFFFORWA.TTF" id="2_6mgxb"]
[ext_resource type="Texture2D" uid="uid://di2agpyb6tl8h" path="res://Assets/2D/Environment/pedestal.png" id="2_i15di"]
[ext_resource type="Texture2D" uid="uid://dssit2x67udb8" path="res://Assets/2D/UI/buybuttonres/norm.tres" id="3_gshau"]
[ext_resource type="PackedScene" uid="uid://b43g85rjlrejp" path="res://Objects/DieRep.tscn" id="3_imhv7"]
[ext_resource type="PackedScene" uid="uid://h4q30iacukt1" path="res://Objects/PotionPanel.tscn" id="3_xa1sm"]
[ext_resource type="FontFile" uid="uid://cxlec2b531som" path="res://Assets/Fonts/Bitmgothic.ttf" id="4_eps0w"]
[ext_resource type="Texture2D" uid="uid://bgnrsk5p2hhob" path="res://Assets/2D/UI/buybuttonres/press.tres" id="4_yj7um"]
[ext_resource type="Texture2D" uid="uid://lhx8dv6rea0d" path="res://Assets/2D/UI/buybuttonres/hover.tres" id="5_ma4os"]
[ext_resource type="AudioStream" uid="uid://duidjgxk7etp6" path="res://Assets/Sound/buy.wav" id="7_c4a77"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_111bm")

[node name="Buy0" type="Control" parent="."]
anchors_preset = 0
offset_left = -27.0
offset_right = 13.0
offset_bottom = 40.0

[node name="0" type="Sprite2D" parent="Buy0"]
position = Vector2(-96, 32)
texture = ExtResource("2_i15di")

[node name="Buy" type="TextureButton" parent="Buy0"]
layout_mode = 0
offset_left = -128.0
offset_top = 73.0
offset_right = -64.0
offset_bottom = 105.0
texture_normal = ExtResource("3_gshau")
texture_pressed = ExtResource("4_yj7um")
texture_hover = ExtResource("5_ma4os")

[node name="Cost" type="RichTextLabel" parent="Buy0"]
layout_mode = 0
offset_left = -115.0
offset_top = 44.0
offset_right = -75.0
offset_bottom = 61.81
theme_override_fonts/normal_font = ExtResource("4_eps0w")
bbcode_enabled = true
text = "[center]5"
scroll_active = false

[node name="PotionPanel" parent="Buy0" instance=ExtResource("3_xa1sm")]
layout_mode = 0
offset_left = -105.0
offset_top = -11.0
offset_right = -87.0
offset_bottom = 21.0

[node name="Description" type="RichTextLabel" parent="Buy0"]
layout_mode = 0
offset_left = -125.0
offset_top = 107.0
offset_right = -59.695
offset_bottom = 187.135
theme_override_fonts/normal_font = ExtResource("2_6mgxb")
theme_override_font_sizes/bold_italics_font_size = 8
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "Description!"
scroll_active = false

[node name="Buy1" type="Control" parent="."]
anchors_preset = 0
offset_left = -9.0
offset_right = 31.0
offset_bottom = 40.0

[node name="Pedestal" type="Sprite2D" parent="Buy1"]
position = Vector2(-32, 32)
texture = ExtResource("2_i15di")

[node name="Buy" type="TextureButton" parent="Buy1"]
layout_mode = 0
offset_left = -64.0
offset_top = 73.0
offset_bottom = 105.0
texture_normal = ExtResource("3_gshau")
texture_pressed = ExtResource("4_yj7um")
texture_hover = ExtResource("5_ma4os")

[node name="Cost" type="RichTextLabel" parent="Buy1"]
layout_mode = 0
offset_left = -51.0
offset_top = 44.0
offset_right = -11.0
offset_bottom = 60.3
theme_override_fonts/normal_font = ExtResource("4_eps0w")
bbcode_enabled = true
text = "[center]5"
scroll_active = false

[node name="PotionPanel" parent="Buy1" instance=ExtResource("3_xa1sm")]
layout_mode = 0
offset_left = -41.0
offset_top = -11.0
offset_right = -23.0
offset_bottom = 21.0

[node name="Description" type="RichTextLabel" parent="Buy1"]
layout_mode = 0
offset_left = -62.0
offset_top = 107.0
offset_right = 3.305
offset_bottom = 187.0
theme_override_fonts/normal_font = ExtResource("2_6mgxb")
theme_override_font_sizes/bold_italics_font_size = 8
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "Description!"
scroll_active = false

[node name="Buy" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_c4a77")

[node name="Buy2" type="Control" parent="."]
anchors_preset = 0
offset_left = 9.0
offset_right = 49.0
offset_bottom = 40.0

[node name="Pedestal2" type="Sprite2D" parent="Buy2"]
position = Vector2(32, 32)
texture = ExtResource("2_i15di")

[node name="Buy" type="TextureButton" parent="Buy2"]
layout_mode = 0
offset_top = 73.0
offset_right = 64.0
offset_bottom = 105.0
texture_normal = ExtResource("3_gshau")
texture_pressed = ExtResource("4_yj7um")
texture_hover = ExtResource("5_ma4os")

[node name="Cost" type="RichTextLabel" parent="Buy2"]
layout_mode = 0
offset_left = 13.0
offset_top = 44.0
offset_right = 53.0
offset_bottom = 60.51
theme_override_fonts/normal_font = ExtResource("4_eps0w")
bbcode_enabled = true
text = "[center]5"

[node name="DieRep" parent="Buy2" instance=ExtResource("3_imhv7")]
layout_mode = 0
offset_left = 16.0
offset_top = -19.0
offset_right = 48.0
offset_bottom = 13.0

[node name="RichTextLabel" parent="Buy2/DieRep/Sprite2D" index="1"]
offset_left = 16.0
offset_top = 2.0
offset_right = 48.0
offset_bottom = 142.0

[node name="Buy3" type="Control" parent="."]
anchors_preset = 0
offset_left = 27.0
offset_right = 67.0
offset_bottom = 40.0

[node name="Pedestal3" type="Sprite2D" parent="Buy3"]
position = Vector2(96, 32)
texture = ExtResource("2_i15di")

[node name="Buy3" type="TextureButton" parent="Buy3"]
layout_mode = 0
offset_left = 64.0
offset_top = 73.0
offset_right = 128.0
offset_bottom = 105.0
texture_normal = ExtResource("3_gshau")
texture_pressed = ExtResource("4_yj7um")
texture_hover = ExtResource("5_ma4os")

[node name="Cost" type="RichTextLabel" parent="Buy3"]
layout_mode = 0
offset_left = 77.0
offset_top = 44.0
offset_right = 117.0
offset_bottom = 60.955
theme_override_fonts/normal_font = ExtResource("4_eps0w")
bbcode_enabled = true
text = "[center]5"

[node name="DieRep" parent="Buy3" instance=ExtResource("3_imhv7")]
layout_mode = 0
offset_left = 80.0
offset_top = -18.0
offset_right = 112.0
offset_bottom = 14.0

[node name="RichTextLabel" parent="Buy3/DieRep/Sprite2D" index="1"]
offset_left = 16.0
offset_top = 2.0
offset_right = 48.0
offset_bottom = 142.0

[connection signal="pressed" from="Buy0/Buy" to="." method="_on_buy_0_pressed"]
[connection signal="pressed" from="Buy1/Buy" to="." method="_on_buy_1_pressed"]
[connection signal="pressed" from="Buy2/Buy" to="." method="_on_buy_2_pressed"]
[connection signal="pressed" from="Buy3/Buy3" to="." method="_on_buy_3_pressed"]

[editable path="Buy2/DieRep"]
[editable path="Buy3/DieRep"]
